# Flashcard/Infrastructure/Http/Controllers/FlashcardCategoryController.php
@@ -73,17 +73,48 @@ class FlashcardCategoryController
         ]);
     }
 
+    #[OAT\Post(
+        path: 'api/flashcards/generate-by-category',
+        operationId: 'flashcards.generate-by-category',
+        description: 'Generate flashcards by provided category',
+        summary: 'Generate flashcards by provided category',
+        security: [['firebase' => []]],
+        requestBody: new OAT\RequestBody(
+            content: new OAT\JsonContent(ref: '#/components/schemas/Requests\Flashcard\GenerateFlashcardsRequest')
+        ),
+        tags: [Tags::FLASHCARD],
+        responses: [
+            new OAT\Response(
+                response: 200,
+                description: 'success',
+                content: new OAT\JsonContent(properties: [
+                    new OAT\Property(
+                        property: 'data',
+                        type: 'array',
+                        items: new OAT\Items(ref: '#/components/schemas/Resources\Flashcard\CategoryDetailsResource'),
+                    ),
+                ]),
+            ),
+            new OAT\Response(
+                response: 401,
+                description: 'bad request',
+                content: new OAT\JsonContent(properties: [
+                    new OAT\Property(
+                        property: 'message',
+                        type: 'string',
+                        example: 'Unauthenticated'
+                    ),
+                ]),
+            ),
+        ],
+    )]
     public function generateFlashcards(
         GenerateFlashcardsRequest $request,
         GenerateFlashcardsHandler $generate_flashcards,
         GetCategoryDetails $get_category_details,
     ): CategoryDetailsResource {
-        $command = new GenerateFlashcards(
-            new Owner(new OwnerId($request->current()->getId()->getValue()), FlashcardOwnerType::USER),
-            $request->getCategoryName()
-        );
 
-        $category_id = $generate_flashcards->handle($command);
+        $category_id = $generate_flashcards->handle($request->toCommand());
 
         return new CategoryDetailsResource($get_category_details->get($category_id));
     }
