# Flashcard/Infrastructure/Http/Resources/FlashcardCategoriesResource.php
@@ -4,9 +4,9 @@ declare(strict_types=1);
 
 namespace Flashcard\Infrastructure\Http\Resources;
 
+use Flashcard\Application\ReadModels\CategoryRead;
 use Illuminate\Http\Resources\Json\JsonResource;
 use Flashcard\Application\DTO\MainFlashcardCategoryDTO;
-use Flashcard\Application\DTO\UserFlashcardCategoryDTO;
 use OpenApi\Attributes as OAT;
 
 #[OAT\Schema(
@@ -31,8 +31,36 @@ use OpenApi\Attributes as OAT;
         ),
         new OAT\Property(
             property: 'categories',
-            type: 'array'
+            description: 'List of flashcard categories',
+            type: 'array',
+            items: new OAT\Items(
+                properties: [
+                    new OAT\Property(
+                        property: 'id',
+                        description: 'Category id',
+                        type: 'integer',
+                        example: 11,
+                    ),
+                    new OAT\Property(
+                        property: 'name',
+                        description: 'Category name',
+                        type: 'string',
+                        example: 'Two people talk'
+                    ),
+                ],
+                type: 'object'
+            )
         ),
+        new OAT\Property(
+            property: 'page',
+            type: 'integer',
+            example: 1,
+        ),
+        new OAT\Property(
+            property: 'per_page',
+            type: 'integer',
+            example: 15,
+        )
     ]
 )]
 class FlashcardCategoriesResource extends JsonResource
@@ -42,8 +70,9 @@ class FlashcardCategoriesResource extends JsonResource
         /** @var MainFlashcardCategoryDTO $main_category */
         $main_category = $this->resource['main'];
 
-        /** @var UserFlashcardCategoryDTO[] $user_categories */
+        /** @var array $user_categories */
         $user_categories = $this->resource['categories'];
+
         $page = $this->resource['page'];
         $per_page = $this->resource['per_page'];
 
@@ -52,7 +81,7 @@ class FlashcardCategoriesResource extends JsonResource
                 'id' => $main_category->getId()->getValue(),
                 'name' => $main_category->getName(),
             ],
-            'categories' => array_map(function (UserFlashcardCategoryDTO $resource) {
+            'categories' => array_map(function (CategoryRead $resource) {
                 return [
                     'id' => $resource->getId()->getValue(),
                     'name' => $resource->getName(),
